app/assets/stylesheets/signed_in_home.scss
.signed-in-home-container {
  font-family: 'Montserrat', sans-serif;
  font-size: 25px;
}

#sidebar-logo {
  width: 80%;
  position: absolute;
  top: 30px;
  left: 15px;
  right: 10px;
  z-index: 3;
}

#artist-photo {
  height: 200px;
}

.sidebar-container {
  display: flex;
  flex-direction: column;
  width: 15%;
  height: 100vh;
  margin-right: 250px;
  position: fixed;
  background-color: black;
  z-index: 2;
}

.header-bar-container {
  background: linear-gradient(120deg, #1db954, #191414);
  color: white;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  position: fixed;
  height: 60px;
  width: 85%;
  padding-bottom: 5px;
  padding-top: 5px;
  top: 0;
  left: 15%;
  z-index: 2;
  opacity: 0.8;
}

.header-bar-wrapper {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  position: absolute;
  padding-right: 30px;
  width: 100px;
}

.header-name {
  font-family: 'Montserrat', sans-serif;
  font-size: 15px;
  position: relative;
  display: inline-block;
  align-items: center;
  background-color: black;
  color: white;
  border: 1px solid black;
  outline: none;
  width: 100px;
  padding: 6px;
  padding-right: 20px;
  padding-left: 20px;
  border-radius: 18px;
  margin: 0 auto;
  z-index: 2;
  cursor: pointer;
}

.header-logout {
  font-family: 'Montserrat', sans-serif;
  font-size: 15px;
  position: absolute;
  background-color: grey;
  color: white;
  border: 1px solid grey;
  outline: none;
  transition: all 1s linear;
  top: 40px;
  right: 30px;
  height: 28px;
  width: 100px;
  border-radius: 10px;
  margin: 0 auto;
  z-index: 1;
  cursor: pointer;
}

.hidden {
  display: none;
}

.main-container {
  background-color: rgb(26, 25, 25);
  width: 85%;
  position: absolute;
  right: 0;
  padding-bottom: 100px;
}

.webplayer-container {
  background-color: #181818;
  border-top: 1px solid #282828;
  height: 90px;
  width: 100%;
  min-width: 620px;
  position: fixed;
  bottom: 0;
  font-size: 16px;
  padding-left: 20px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  z-index: 3;
}

.artists-index, .albums-index {
  margin-top: 70px;
  padding: 10px;
  padding-left: 20px;
  color: white;

  h1 {
    font-weight: 500;
    font-size: 24px;
    line-height: 28px;
    letter-spacing: -.04em;
    margin-bottom: 15px;
  }
}

.artists-index:hover, .albums-index:hover {
  background-color: rgb(59, 59, 59);
  transition-duration: .2s;
  transition-timing-function: linear;
}

.albums-index-container, .artists-index-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.single-artist-container {
  padding-top: 20px;
  padding-bottom: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 16px;

  img {
    padding-bottom: 10px;
    max-height: 300px;
  }
}

